apps/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    environment: production
    owner: blazepower
