apps/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: adguard.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-web
                port:
                  number: 3000
  tls:
    - hosts:
        - adguard.homelab
      secretName: adguard-home-tls
